5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3985/executions/1791_1619.log
== TEST (2019-05-29 14:19:25) 
-- CODE:
from numpy import*
t= array(eval(float(input())))
m= array(eval(input()))
i=0
j=0
q=0.005*90
mo=0.005*45
while(i<size(v)):
	if(v[i]=="QUENTE"):
		j= j+(m[i]*q)
	if(v[i]=="MORNO"):
		j= j+(m[i]*mo)
	elif(v[i]=="FRIO"):
		j= j+(m[i]*0)
	i=i+1
print(j)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:19:53) 
-- CODE:
from numpy import*
t= array(eval(input()))
m= array(eval(input()))
i=0
j=0
q=0.005*90
mo=0.005*45
while(i<size(v)):
	if(v[i]=="QUENTE"):
		j= j+(m[i]*q)
	if(v[i]=="MORNO"):
		j= j+(m[i]*mo)
	elif(v[i]=="FRIO"):
		j= j+(m[i]*0)
	i=i+1
print(j)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:20:14) 
-- CODE:
from numpy import*
t= array(eval(input()))
m= array(eval(input()))
i=0
j=0
q=0.005*90
mo=0.005*45
while(i<size(v)):
	if(v[i]=="QUENTE"):
		j= j+(m[i]*q)
	if(v[i]=="MORNO"):
		j= j+(m[i]*mo)
	elif(v[i]=="FRIO"):
		j= j+(m[i]*0)
	i=i+1
print(j)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:20:21) 
-- CODE:
from numpy import*
t= array(eval(input()))
m= array(eval(input()))
i=0
j=0
q=0.005*90
mo=0.005*45
while(i<size(v)):
	if(v[i]=="QUENTE"):
		j= j+(m[i]*q)
	if(v[i]=="MORNO"):
		j= j+(m[i]*mo)
	elif(v[i]=="FRIO"):
		j= j+(m[i]*0)
	i=i+1
print(j)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:32:33) 
-- CODE:
from numpy import*
t= array(eval(input()))
m= array(eval(input()))
i=0
j=0
q=0.005*90
mo=0.005*45
while(i<size(t)):
	if(v[i]=="QUENTE"):
		j= j+(m[i]*q)
	if(v[i]=="MORNO"):
		j= j+(m[i]*mo)
	elif(v[i]=="FRIO"):
		j= j+(m[i]*0)
	i=i+1
print(j)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:34:00) 
-- CODE:
from numpy import*
t= array(eval(input()))
m= array(eval(input()))
i=0
j=0
q=0.005*90
mo=0.005*45
while(i<size(t)):
	if(m[i]=="QUENTE"):
		j= j+(t[i]*q)
	if(m[i]=="MORNO"):
		j= j+(t[i]*mo)
	elif(m[i]=="FRIO"):
		j= j+(t[i]*0)
	i=i+1
print(j)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:35:04) 
-- CODE:
from numpy import*
t= array(eval(input()))
m= array(eval(input()))
i=0
j=0
q=0.005*90
mo=0.005*45
while(i<size(t)):
	if(m[i]=="QUENTE"):
		j= j+(t[i]*q)
	if(m[i]=="MORNO"):
		j= j+(t[i]*mo)
	elif(m[i]=="FRIO"):
		j= j+(t[i]*0)
	i=i+1
print(j)
	
-- EXECUTION TIME:
0.447428
-- TEST CASE 1:
---- input:
[10,20,10]
["MORNO","QUENTE","QUENTE"]
---- correct output:
15.75
---- user output:
15.75
-- TEST CASE 2:
---- input:
[15,20,20]
["MORNO","QUENTE","MORNO"]
---- correct output:
16.88
---- user output:
16.875
-- TEST CASE 3:
---- input:
[10,20,10]
["MORNO","FRIO","FRIO"]
---- correct output:
2.25
---- user output:
2.25
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:35:16) 
-- CODE:
from numpy import*
t= array(eval(input()))
m= array(eval(input()))
i=0
j=0
q=0.005*90
mo=0.005*45
while(i<size(t)):
	if(m[i]=="QUENTE"):
		j= j+(t[i]*q)
	if(m[i]=="MORNO"):
		j= j+(t[i]*mo)
	elif(m[i]=="FRIO"):
		j= j+(t[i]*0)
	i=i+1
print(j)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:36:11) 
-- CODE:
from numpy import*
t= array(eval(input()))
m= array(eval(input()))
i=0
j=0
q=0.005*90
mo=0.005*45
while(i<size(t)):
	if(m[i]=="QUENTE"):
		j= j+(t[i]*q)
	if(m[i]=="MORNO"):
		j= j+(t[i]*mo)
	elif(m[i]=="FRIO"):
		j= j+(t[i]*0)
	i=i+1
print(j)
	
-- EXECUTION TIME:
0.346126
-- TEST CASE 1:
---- input:
[10,20,10]
["MORNO","QUENTE","QUENTE"]
---- correct output:
15.75
---- user output:
15.75
-- TEST CASE 2:
---- input:
[15,20,20]
["MORNO","QUENTE","MORNO"]
---- correct output:
16.88
---- user output:
16.875
-- TEST CASE 3:
---- input:
[10,20,10]
["MORNO","FRIO","FRIO"]
---- correct output:
2.25
---- user output:
2.25
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:36:17) 
-- CODE:
from numpy import*
t= array(eval(input()))
m= array(eval(input()))
i=0
j=0
q=0.005*90
mo=0.005*45
while(i<size(t)):
	if(m[i]=="QUENTE"):
		j= j+(t[i]*q)
	if(m[i]=="MORNO"):
		j= j+(t[i]*mo)
	elif(m[i]=="FRIO"):
		j= j+(t[i]*0)
	i=i+1
print(j)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:38:07) 
-- CODE:
from numpy import*
t= array(eval(input()))
m= array(eval(input()))
i=0
j=0
q=0.005*90
mo=0.005*45
while(i<size(t)):
	if(m[i]=="QUENTE"):
		j= j+(t[i]*q)
	if(m[i]=="MORNO"):
		j= j+(t[i]*mo)
	elif(m[i]=="FRIO"):
		j= j+(t[i]*0)
	i=i+1
print(round(j,1)
	
-- EXECUTION TIME:
0.128439
-- ERROR:
  File "/home/codebench/codes/1791/1619/main.py", line 18
    
     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:38:11) 
-- CODE:
from numpy import*
t= array(eval(input()))
m= array(eval(input()))
i=0
j=0
q=0.005*90
mo=0.005*45
while(i<size(t)):
	if(m[i]=="QUENTE"):
		j= j+(t[i]*q)
	if(m[i]=="MORNO"):
		j= j+(t[i]*mo)
	elif(m[i]=="FRIO"):
		j= j+(t[i]*0)
	i=i+1
print(round(j,1)
	
-- ERROR:
File "XXXX", line 18
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:38:15) 
-- CODE:
from numpy import*
t= array(eval(input()))
m= array(eval(input()))
i=0
j=0
q=0.005*90
mo=0.005*45
while(i<size(t)):
	if(m[i]=="QUENTE"):
		j= j+(t[i]*q)
	if(m[i]=="MORNO"):
		j= j+(t[i]*mo)
	elif(m[i]=="FRIO"):
		j= j+(t[i]*0)
	i=i+1
print(round(j,2)
	
-- ERROR:
File "XXXX", line 18
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:38:28) 
-- CODE:
from numpy import*
t= array(eval(input()))
m= array(eval(input()))
i=0
j=0
q=0.005*90
mo=0.005*45
while(i<size(t)):
	if(m[i]=="QUENTE"):
		j= j+(t[i]*q)
	if(m[i]=="MORNO"):
		j= j+(t[i]*mo)
	elif(m[i]=="FRIO"):
		j= j+(t[i]*0)
	i=i+1
print(round(j,2)
-- ERROR:
File "XXXX", line 17
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:38:30) 
-- CODE:
from numpy import*
t= array(eval(input()))
m= array(eval(input()))
i=0
j=0
q=0.005*90
mo=0.005*45
while(i<size(t)):
	if(m[i]=="QUENTE"):
		j= j+(t[i]*q)
	if(m[i]=="MORNO"):
		j= j+(t[i]*mo)
	elif(m[i]=="FRIO"):
		j= j+(t[i]*0)
	i=i+1
print(round(j,2)
-- EXECUTION TIME:
0.2982
-- ERROR:
  File "/home/codebench/codes/1791/1619/main.py", line 17
    
                    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:38:31) 
-- CODE:
from numpy import*
t= array(eval(input()))
m= array(eval(input()))
i=0
j=0
q=0.005*90
mo=0.005*45
while(i<size(t)):
	if(m[i]=="QUENTE"):
		j= j+(t[i]*q)
	if(m[i]=="MORNO"):
		j= j+(t[i]*mo)
	elif(m[i]=="FRIO"):
		j= j+(t[i]*0)
	i=i+1
print(round(j,2)
-- ERROR:
File "XXXX", line 17
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:38:57) 
-- CODE:
from numpy import*
t= array(eval(input()))
m= array(eval(input()))
i=0
j=0
q=0.005*90
mo=0.005*45
while(i<size(t)):
	if(m[i]=="QUENTE"):
		j= j+(t[i]*q)
	if(m[i]=="MORNO"):
		j= j+(t[i]*mo)
	elif(m[i]=="FRIO"):
		j= j+(t[i]*0)
	i=i+1
print(round(j,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:38:59) 
-- CODE:
from numpy import*
t= array(eval(input()))
m= array(eval(input()))
i=0
j=0
q=0.005*90
mo=0.005*45
while(i<size(t)):
	if(m[i]=="QUENTE"):
		j= j+(t[i]*q)
	if(m[i]=="MORNO"):
		j= j+(t[i]*mo)
	elif(m[i]=="FRIO"):
		j= j+(t[i]*0)
	i=i+1
print(round(j,2))
-- EXECUTION TIME:
0.476435
-- TEST CASE 1:
---- input:
[10,20,10]
["MORNO","QUENTE","QUENTE"]
---- correct output:
15.75
---- user output:
15.75
-- TEST CASE 2:
---- input:
[15,20,20]
["MORNO","QUENTE","MORNO"]
---- correct output:
16.88
---- user output:
16.88
-- TEST CASE 3:
---- input:
[10,20,10]
["MORNO","FRIO","FRIO"]
---- correct output:
2.25
---- user output:
2.25
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
